security(P0): enforce secrets, sanitize input, and harden schema
- Require JWT and session secrets in production
- Add validation and safe test defaults
- Sanitize inputs (XSS, max length, array limits)
- Enforce unique email and varchar constraints
- Update .env.example with secure setup notes
- Load test env vars and add prod checks
- 37/48 tests passing — integration fixes next

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,11 @@ RATE_LIMIT_MAX_REQUESTS=100
 LOG_LEVEL=info
 LOG_FILE_PATH=./logs/app.log
 
-# Security
-JWT_SECRET=your_super_secret_jwt_key_here
+# Security (REQUIRED in production - generate secure random strings)
+# Generate JWT_SECRET: openssl rand -base64 32
+# Generate SECURITY_SESSION_SECRET: openssl rand -base64 32
+JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long_change_in_production
 BCRYPT_ROUNDS=12
+SECURITY_SESSION_SECRET=your_super_secure_session_secret_minimum_32_characters_change_in_production
+SECURITY_TRUST_PROXY=false
+SECURITY_HTTPS_REDIRECT=false
